--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
   </head>
   <body>
     <div id="card">
-      <img src="images/hero.jpg">
-      <h1>My Name</h1>
+      <img src="images/baby-yoda.jpeg">
+      <h1>Cameron Keenan</h1>
       <ul>
-        <li><label>Name</label>John Doe</li>
+        <li><label>Name</label>Cameron Keenan</li>
+        <li><label>Address</label>123 Fake Street</li>
+        <li><label>Email</label>cameronrkeenan@gmail.com</li>
+        <li><label>Phone Number</label>+64222222222</li>
+        <li><label>Website</label><a href="https://www.youtube.com/watch?v=oHg5SJYRHA0">Website</a></li>
       </ul>
       <p><button>Contact</button></p>
     </div>
